# Me

./: Autorun.inf  Documentacion_Proyectos_EXPñ.md  Kit de Entornos Python (Windows - CMD).md  Notebook.txt  Otro Yo (standalone).html  ProjectZomboid-Lore.md  README.md  Solucion FatalError Misery  Solucion FatalError Misery.md  THE FOREST LISTA PARA SPEEDRUN 100%.txt  TestTrait.md  example.md  extensiones-vscode.txt  main.ino  manu.pu  ✅ SOLUCIÓN DEFINITIVA (adaptada a Intel UHD 620)
Arduino/: Arduino.ipynb  Formulario.ipynb  Invernadero_Inteligente.ipynb  main.ino
Arduino/Invernadero-Inteligente/: Invernadero-Inteligente.ino  main.ino  main.txt
Kit de Entornos Python (Windows - CMD)/: README.md
Kit de Entornos Python (Windows - CMD)/Doc/: README_Entorno_Python_VSCode.md  README_Scripts_CMD.md  requirements_example.txt
Kit de Entornos Python (Windows - CMD)/Scripts CMD/: open_venv_here.cmd  provision_and_open_venv.cmd  reset_venv_from_requirements.cmd  (+1 more)
delete/: Aprender_CSharp.md  Documentacion_Proyectos_EXP.md  Pokemon_Equipos_Completo.md  README_CMD_Entornos.md  README_Entorno_Python_VSCode.md  README_Scripts_CMD.md  Readme_Entorno_VSCode_Unificado.md  Ruta_Proyectos_Python_Profesional_Estructurada.md  Ruta_Proyectos_Python_v1.md  Unificado_Guiones_Entornos_ProyectosEXP.md  debug_exp_report.py  debug_exp_report_doc.md  style.css
delete/poo-mini/: README.md
delete/poo-mini/cpp/: CMakeLists.txt  README.md
delete/poo-mini/cpp/src/: auto.h  bicicleta.h  main.cpp  vehiculo.h
delete/poo-mini/cpp/tests/: test_runner.cpp
xd/: Extenciones.txt  Marcadores.html
(+49 files in other folders)
